Fixed: chat box goes off screen when on mobile Changed the sidebar to be flexbox. Properly used flex instead of flex-grow Userlist is maximum 40% of sidebar height

--- a/htmlRage/css/styles.css
+++ b/htmlRage/css/styles.css
@@ -65,6 +65,7 @@ body {
 	line-height: 1.25;
 	
 	overflow:hidden;
+	touch-action: manipulation
 }
 #table{
 	table-layout: auto;
@@ -88,7 +89,7 @@ tr:nth-child(even) {
 	width:100%
 }
 #middle {
-	height:100vh;
+	flex: 1;
 	display: flex;
 	flex-direction: row;
 }
@@ -97,6 +98,7 @@ tr:nth-child(even) {
 	display: flex;
 	flex-direction: column;
 	width:80%;
+	position:relative;
 }
 
 #content {
@@ -121,6 +123,8 @@ tr:nth-child(even) {
 	padding: 5px;
 	color: #FFFFFF;
 	background: #888888;
+	display: flex;
+	flex-direction:column;
 }
 
 * { /* keeps boxes from being bigger than they are*/
@@ -156,11 +160,13 @@ tr:nth-child(even) {
 }
 
 #users{
-	height: 20vh;
+	max-height: 40%;
+	display: flex;
+	flex-direction: column;
+	flex: 0 1 0;
 }
 
 #userlist{
-	height:100%;
 	overflow-y: hidden;
 }
 
@@ -169,12 +175,16 @@ tr:nth-child(even) {
 }
 
 #chat{
-	height: 75vh;
+	display:flex;
+	flex-direction:column;
+	overflow:hidden;
+	flex: 1 1 0;
 }
 
 #chatlog{
 	overflow-y: hidden;
-	height: 90%;
+	flex: 1 1 0;
+	min-height: 3em;
 }
 
 #chatlog:hover{
@@ -189,12 +199,13 @@ tr:nth-child(even) {
 	flex-direction: column;
 	align-self: flex-start;
 	width: 100%;
+	position:absolute;
 }
 
 #bidTitle{
 	display: flex;
 	margin-top: .5vh;
-	font-size: 3vh;
+	font-size: 2em;
 	max-height: 30px;
 	/* border:1px solid #ffffff; */
 }
@@ -204,7 +215,6 @@ tr:nth-child(even) {
 	align-items: center;
 	justify-content: center;
 	flex-direction: row;
-	margin: .5vh;
 	margin-top: 0;
 	margin-bottom: 0;
 	padding: .5vh;
@@ -215,7 +225,7 @@ tr:nth-child(even) {
 #leadMessage{
 	display: none;
 	color: yellow;
-	font-size: 3vh;
+	font-size: 2em;
 	max-height: 30px;
 	margin-top: 0;
 	margin-bottom: .5vh;
@@ -226,18 +236,17 @@ tr:nth-child(even) {
 	display: flex;
 	height: 6vw;
 
-	flex-grow: 1;
+	flex: 1;
 	background: #aaaaaa;
 	cursor: default;
 	justify-content: center;
 	align-items: center;
 	flex-direction: row;
 	line-height: 1;
-	font-size: 3vh;
+	font-size: 2em;
 	border-radius: 4px;
 	
-	margin: .5vh;
-	padding: .5vh;
+	margin: .15em;
 }
 
 .bidButton.selected{
